# celery_django_redis

./: README.md  pyproject.toml  requirements.txt
myproject/: pytest.ini
myproject/myproject/: celery.py
myproject/store/: models.py  tasks.py
